--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
     "react-use": "^17.6.0",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
